# Fall-Guys-AI

./: .gitignore  main.py  pyproject.toml  training.py  transform.json
conf/: config.yaml
conf/augmentation/: qqqq.yaml  transform.yaml
conf/model/COCO-Detection/: faster_rcnn_R_50_FPN_3x.yaml
data/: 106.xml  99.xml  classes.txt  cuiyan.xml  emei.xml  enter.xml  gaibang.xml  kunlun.xml  login.xml  name.xml  tangmen.xml  tianren.xml  tianwang.xml  wudang.xml  wudu.xml
utils/: __init__.py  aaa.py  augmentation.py
~/experiments/autoalbument-search-cifar10/: search.yaml
