[tool.poetry]
name = "fall-guys-ai"
version = "0.1.0"
description = ""
authors = ["zhou cheng <zhoucheng@kingsoft.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
autoalbument = "^0.4.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "foo"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true